--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 == Welcome to Rails
 
-RE EDITED BY RANJIT @ 8:41 16/11/2011
+RE EDITED BY RANJIT 18/11/2011 in environment Ubuntu
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
 
